Docs for like/dislike created.
