# backend/internal/domains/sale_offer/sale_offer_handler.go
@@ -178,7 +178,22 @@ func (h *Handler) GetOrderKeys(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"order_keys": keys})
 }
 
-func (h *Handler) LikeNewOffer(c *gin.Context) {
+// LikeNewOffer godoc
+//
+//	@Summary		Like new offer
+//	@Description	Like new offer by giving it's id. You have to be logged in to perform this operation.
+//	@Tags			sale-offer
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		uint					true	"Sale offer ID"
+//	@Success		200	{object}	liked_offer.LikedOffer	"Liked offer"
+//	@Failure		400	{object}	custom_errors.HTTPError	"Invalid input data"
+//	@Failure		401	{object}	custom_errors.HTTPError	"Unauthorized - user not logged in"
+//	@Failure		404	{object}	custom_errors.HTTPError	"Sale offer not found"
+//	@Failure		500	{object}	custom_errors.HTTPError	"Internal server error"
+//	@Router			/sale-offer/id/like/{id} [post]
+//	@Security		Bearer
+func (h *Handler) LikeOffer(c *gin.Context) {
 	offerID, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
 		custom_errors.HandleError(c, err, ErrorMap)
@@ -192,6 +207,21 @@ func (h *Handler) LikeNewOffer(c *gin.Context) {
 	c.JSON(http.StatusOK, liked_offer.LikedOffer{OfferID: uint(offerID), UserID: userID.(uint)})
 }
 
+// DislikeOffer godoc
+//
+//	@Summary		Dislike offer
+//	@Description	Dislike offer by giving it's id. You have to be logged in to perform this operation.
+//	@Tags			sale-offer
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		uint					true	"Sale offer ID"
+//	@Success		204	{object}	nil						"No content"
+//	@Failure		400	{object}	custom_errors.HTTPError	"Invalid input data"
+//	@Failure		401	{object}	custom_errors.HTTPError	"Unauthorized - user not logged in"
+//	@Failure		404	{object}	custom_errors.HTTPError	"Sale offer not found"
+//	@Failure		500	{object}	custom_errors.HTTPError	"Internal server error"
+//	@Router			/sale-offer/id/dislike/{id} [delete]
+//	@Security		Bearer
 func (h *Handler) DislikeOffer(c *gin.Context) {
 	offerID, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
